# rosbag_deck

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  build.sh  justfile  pyproject.toml  test.sh
.config/: nextest.toml
.github/workflows/: ci.yml  release-deb.yml
docs/design/: bag-editor.md  ros2-publishing.md  topic-filtering.md
docs/roadmap/: 1-foundation.md  2-core-library.md  3-cli-and-tui.md  4-python-bindings.md  5-testing-and-quality.md  6-topic-filtering.md  7-bag-editor.md  8-ros2-publishing.md
rosbag_deck_core/: CMakeLists.txt  README.md  package.xml
rosbag_deck_core/cmake/: rosbag_deck_core-config.cmake.in
rosbag_deck_core/examples/: c_example.c  dynamic_types_example.cpp
rosbag_deck_core/include/rosbag_deck_core/: bag_worker.hpp  index_manager.hpp  message_cache.hpp  message_type_registry.hpp  rosbag_deck_c.h  rosbag_deck_core.hpp  types.hpp  utilities.hpp
rosbag_deck_core/src/: bag_worker.cpp  index_manager.cpp  message_cache.cpp  message_type_registry.cpp  rosbag_deck_c.cpp  rosbag_deck_core.cpp  utilities.cpp
rosbag_deck_core/test/fixtures/: mock_callbacks.cpp  mock_callbacks.hpp  test_bag_creator.cpp  test_bag_creator.hpp  test_data_generator.cpp  test_data_generator.hpp
rosbag_deck_core/test/integration/: test_integration.cpp
rosbag_deck_core/test/performance/: test_performance.cpp
rosbag_deck_core/test/unit/: test_bag_worker.cpp  test_c_api.cpp  test_index_manager.cpp  test_message_cache.cpp  test_message_type_registry.cpp  test_rosbag_deck_core.cpp
rosbag_deck_interface/: CMakeLists.txt  README.md  package.xml
rosbag_deck_interface/msg/: PlaybackStatus.msg
rosbag_deck_interface/srv/: GetBagInfo.srv  SeekToTime.srv
rosbag_deck_node/: CMakeLists.txt  README.md  package.xml
rosbag_deck_node/include/rosbag_deck_node/: rosbag_deck_node.hpp
rosbag_deck_node/src/: main.cpp  rosbag_deck_node.cpp
rosbag_deck_python/: .gitignore  README.md  ffi_builder.py  package.xml  pyproject.toml  run_tests.py  setup.py
rosbag_deck_python/examples/: basic_usage.py
rosbag_deck_python/rosbag_deck/: __init__.py  core.py  exceptions.py  ffi.py
rosbag_deck_python/tests/: README.md  __init__.py  conftest.py
rosbag_deck_python/tests/fixtures/: __init__.py  mock_cffi.py  mock_utilities.py
rosbag_deck_python/tests/integration/: __init__.py  test_basic_functionality.py  test_memory_management.py  test_performance.py  test_python_c_interop.py
rosbag_deck_python/tests/unit/: __init__.py  test_callbacks.py  test_cffi_wrapper.py  test_data_structures.py  test_deck_core.py  test_error_handling.py  test_exceptions.py  test_memory_management.py
rosbag_deck_tui/: README.md  package.xml  pyproject.toml  setup.py
rosbag_deck_tui/rosbag_deck_tui/: __init__.py  main.py  player.py
scripts/: download-test-bags.sh
