[workspace]
resolver = "2"

members = [
    "packages/rosbag-deck",
    "packages/rosbag-deck-cli",
    "packages/rosbag-deck-python",
    "packages/rosbag-deck-ffi",
    "packages/testing/rosbag-deck-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
rosbag-deck = { path = "packages/rosbag-deck" }
rosbag-deck-ffi = { path = "packages/rosbag-deck-ffi" }

# Serialization / bag formats
mcap = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
rstest = "0.25"
tempfile = "3"
assert_cmd = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev-release]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true
