[workspace]
resolver = "2"

members = [
    "packages/rosbag_deck_core",
    "packages/rosbag_deck",
    "packages/rosbag_deck_python",
    "packages/rosbag_deck_ffi",
    "packages/testing/rosbag_deck_tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
rosbag_deck_core = { path = "packages/rosbag_deck_core" }
rosbag_deck_ffi = { path = "packages/rosbag_deck_ffi" }

# Serialization / bag formats
mcap = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }
regex = "1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
rstest = "0.25"
tempfile = "3"
assert_cmd = "2"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev-release]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true
