[project]
name = "rosbag-deck-workspace"
version = "0.1.0"
description = "Interactive ROS 2 bag player with tape deck-style controls"
authors = [{ name = "aeon", email = "jerry73204@gmail.com" }]
requires-python = ">= 3.10"
license = { text = "MIT" }

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["packages/rosbag-deck-python"]

[tool.uv.sources]
rosbag-deck = { workspace = true }
