<?xml version="1.0"?>
<package format="3">
  <name>rosbag_deck_interface</name>
  <version>0.1.0</version>
  <description>ROS message and service definitions for rosbag_deck</description>
  <maintainer email="lctk@ntu.edu.tw">NEWSLAB NTU</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>