<?xml version="1.0"?>
<package format="3">
  <name>rosbag_deck_node</name>
  <version>0.1.0</version>
  <description>ROS node wrapper for rosbag_deck_core library</description>
  <maintainer email="lctk@ntu.edu.tw">NEWSLAB NTU</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosbag_deck_interface</depend>
  <depend>rosbag_deck_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>