[build-system]
requires = ["setuptools>=45", "wheel", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rosbag_deck"
version = "0.1.0"
description = "Python API for RosbagDeck - tape deck style rosbag playback"
authors = [{name = "LCTK Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cffi>=1.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rosbag_deck*"]