[build-system]
requires = ["setuptools>=45", "wheel", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rosbag_deck"
version = "0.1.0"
description = "Python API for RosbagDeck - tape deck style rosbag playback"
authors = [{name = "LCTK Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cffi>=1.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rosbag_deck"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.7.0",
    "memory-profiler>=0.60.0",
    "black>=22.0.0",
    "mypy>=0.900",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=rosbag_deck",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=85",
]
markers = [
    "unit: Unit tests that run quickly and don't require external resources",
    "integration: Integration tests that may require real bag files",
    "performance: Performance tests that measure timing and memory",
    "slow: Tests that take a long time to run",
]

[tool.coverage.run]
source = ["rosbag_deck"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.setuptools]
include-package-data = true
