[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosbag_deck_tui"
version = "0.1.0"
description = "Terminal-based rosbag player using tape deck metaphor"
authors = [{name = "LCTK Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rosbag_deck",  # Our Python wrapper
    "rich>=10.0.0",        # Rich terminal UI library
    "textual>=0.1.0",      # Modern TUI framework
    "numpy>=1.17.3,<1.25.0",  # Compatible with system scipy
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: System :: Distributed Computing",
    "Environment :: Console :: Curses",
]

[project.scripts]
rosbag-tui = "rosbag_deck_tui.main:main"
rosbag-deck-tui = "rosbag_deck_tui.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rosbag_deck_tui*"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "mypy>=0.900",
]
